# eeg_cs

./: .gitignore  pyproject.toml
eeg_cs/: main.py  main2.py
eeg_cs/db/: __init__.py  client.py  eeg_cs.sqlite3  init.db  init.sql
eeg_cs/evaluations/: 02_sensing_matrix.py  02_sensing_matrix2.py  03_sparsifying_matrix.py  03_sparsifying_matrix2.py  05_dataset_specific.py  analyze_outliers.py  build_statistics_table.py  calc_coherence.py  cs_example.ipynb  generate_data.py  plot_boxplot.py  plot_compressed_signals.py  plot_kde.py  plot_line.py  plot_reconstructions.py  plot_sparsifying_matrices.py  save_data.py  statistics_table_formatted.csv  statistics_table_raw.csv  store_data.py
eeg_cs/evaluations/TESTE/: TESTE.csv
eeg_cs/evaluations/coherence/: table.csv
eeg_cs/evaluations/sensing_matrix/: m_128_cr_4_nblocks_10_rs_20.csv  m_128_cr_4_nblocks_10_rs_20_duckdb_agg.csv  m_256_cr_2_nblocks_10_rs_20.csv  m_256_cr_2_nblocks_10_rs_20_duckdb_agg.csv  m_256_cr_2_nblocks_2_rs_18.csv  m_256_cr_2_nblocks_5_rs_18.csv  m_256_cr_2_nblocks_5_rs_18_duckdb_agg.csv
eeg_cs/evaluations/sparsifying_matrix/: 1_m_256_cr_2_nblocks_5_rs_20_duckdb_agg.csv  m_256_cr_2_nblocks_15_rs_20.csv  m_256_cr_2_nblocks_15_rs_20_duckdb_agg.csv  m_256_cr_2_nblocks_50_rs_20_duckdb_agg.csv  m_256_cr_2_nblocks_5_rs_20.csv  m_256_cr_2_nblocks_5_rs_20_duckdb_agg.csv
eeg_cs/models/: compressed_sensing.py  loader.py  loader2.py  loaderv2.py  reconstruction_algorithm.py  sensing_matrix.py  sparsifying_matrix.py
eeg_cs/references/: 0005.ipynb  CH03_SEC03_2_AudioCS.ipynb  PCP_08_signal.ipynb  bciiv_loader.py  cs1bit_biht.ipynb  cs_test.ipynb  ecg_cs_bsbl.ipynb  final.py  fourier.py  main.ipynb  main.py  partial_wh_sensor_cosine_basis.ipynb  sparse_binary_sensor.ipynb  sparse_binary_sensor.py  test.ipynb  wt_op.py
eeg_cs/references/pybrain_mne/: 01-read_raw_crop_filter.ipynb  04-cleaning_data.ipynb
outliers_analysis/: outliers_nmse_dct.csv
